<resources>
    <string name="app_name">Inventory</string>
    <string name="editor_title">Edit item</string>
    <string name="empty_view_title_text">There are no items in your inventory</string>
    <string name="empty_view_subtitle_text">Start by adding some new items.</string>
    <string name="category_overview">Overview</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_picture">Add picture</string>
    <string name="item_image">Item image</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_activity_title_new_item">Add new Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="item_saving_error">Item Saving Error</string>
    <string name="item_saved">Item Saved</string>
    <string name="delete_dialog_msg">Delete this Item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_item_successful">Item Deleted</string>
    <string name="editor_delete_item_failed">Delete Item Error</string>
    <string name="fields_required">Name, quantity and price are required</string>
    <string name="dialog_select_prompt">Choose a picture from</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="image_picker_error">Something is wrong with the image. Please try a different one.</string>
    <string name="sell">Sell</string>
    <string name="item_sold_error">Error selling item</string>
    <string name="item_sold">Item Sold</string>
    <string name="email">Email</string>
    <string name="call">Call</string>
    <string name="add">Add</string>
    <string name="default_sell_size">1</string>
    <string name="sold">"Sold: "</string>
    <string name="units">" Pieces"</string>
    <string name="item_phone">Supplier Phone Number</string>
    <string name="item_email">Supplier Email</string>
    <string name="phone_error">Invalid phone number</string>
    <string name="unavailable">Quantity Unavailable</string>

</resources>
