<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/large_margin">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="140dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/editor_add_image_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_add_a_photo_black_24dp" />
            </LinearLayout>
            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingEnd="@dimen/small_margin"
                android:paddingLeft="@dimen/small_margin"
                android:paddingRight="@dimen/small_margin"
                android:paddingStart="@dimen/small_margin">
                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_item_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/item_name"
                    android:inputType="text"
                    android:maxLength="35" />
                <!-- Quantity field -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_item_quantity"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/quantity"
                        android:inputType="number"
                        android:maxLength="9" />

                    <TextView
                        android:id="@+id/edit_item_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/units" />

                </RelativeLayout>

                <!-- Price field -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_item_price"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/price"
                        android:inputType="number"
                        android:maxLength="10" />

                    <TextView
                        android:id="@+id/edit_item_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        tools:text="£" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_item_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/item_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="35"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/edit_order_email_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_item_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/item_phone"
                        android:inputType="phone"
                        android:maxLength="35"
                        android:textSize="14sp" />

                    <Button

                        android:id="@+id/edit_order_phone_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call" />
                </LinearLayout>

                <TextView
                    android:id="@+id/edit_item_sold_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    tools:text="Sold 5 pieces" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/edit_sell_order_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/edit_sell_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/minus" />

            <EditText
                android:id="@+id/edit_quantity_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:inputType="number"
                android:maxLength="9"
                android:text="@string/default_sell_size" />

            <Button
                android:id="@+id/edit_shipment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/add" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/edit_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/ic_image_black_24dp"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop" />
    </LinearLayout>
</ScrollView>

